-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.7.0
-
None
-
3
-
16426
1. setup the system and run sanity
2. add a new network interface on the client side
3. the traffic was interrupted and keep showing following messages:
4. after remove the new added interface, system goes back to normal
== sanity test 27B: call setstripe on open unlinked file/rename victim == 12:18:00 (1415218680) Lustre: DEBUG MARKER: == sanity test 27B: call setstripe on open unlinked file/rename victim == 12:18:00 (1415218680) LNet: Added LNI 192.168.4.74@o2ib [8/256/0/180] LNet: No route to 192.168.4.47@o2ib via from 10.2.4.74@tcp Lustre: 4806:0:(client.c:1934:ptlrpc_expire_one_request()) @@@ Request sent has failed due to network error: [sent 1415218690/real 1415218690] req@ffff880824129000 x1483963522156376/t0(0) o400->lustre-MDT0000-mdc-ffff880434a40800@192.168.4.47@o2ib:12/10 lens 224/224 e 0 to 1 dl 1415218753 ref 1 fl Rpc:XN/0/ffffffff rc 0/-1 Lustre: 4806:0:(client.c:1934:ptlrpc_expire_one_request()) Skipped 3 previous similar messages Lustre: lustre-MDT0000-mdc-ffff880434a40800: Connection to lustre-MDT0000 (at 192.168.4.47@o2ib) was lost; in progress operations using this service will wait for recovery to complete LNet: Skipped 5 previous similar messages LustreError: 166-1: MGC192.168.4.47@o2ib: Connection to MGS (at 192.168.4.47@o2ib) was lost; in progress operations using this service will fail LNet: Removed LNI 192.168.4.74@o2ib Lustre: lustre-OST0000-osc-ffff880434a40800: Connection restored to lustre-OST0000 (at 192.168.4.47@o2ib) Lustre: Skipped 2 previous similar messages LL_IOC_LOV_SETSTRIPE: No such file or directory LL_IOC_LOV_SETSTRIPE: No such file or directory Resetting fail_loc on all nodes...done. PASS 27B (26s)